# openmethane

./: .dockerignore  .env  .env.docker  .env.docker-monthly  .env.docker-test  .env.example  .env.local  .env.nci  .env.nci-nsw  .env.nci-test  .git-blame-ignore-revs  .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  journal.org  load_p4d_modules.sh  methodology-website.md  methodology.org  pyproject.toml  requirements.txt  restart_script.py  runscript.py  setup_logging.py  submit.sh  testfile  todo.org
.github/: pull_request_template.md  release_template.md
.github/actions/setup/: action.yaml
.github/workflows/: build_docker.yaml  bump.yaml  ci.yaml  cleanup_docker.yaml  release.yaml
baseline_data/: README.md  baseline.py  display.py  requirements.txt
changelog/: 102.chore.md  103.improvement.md  104.bug.md  106.trivial.md  109.fix.md  112.improvement.md  113.improvement.md  115.improvement.md  116.improvement.md  117.improvement.md  118.fix.md  119.fix.md  120.improvement.md  122.fix.md  123.improvement.md  124.improvement.md  129.improvement.md  130.fix.md  131.feature.md  136.improvement.md  137.fix.md  138.improvement.md  139.improvement.md  140.fix.md  141.improvement.md  142.improvement.md  143.fix.md  144.fix.md  145.trivial.md  146.fix.md  147.improvement.md  148.improvement.md  149.trivial.md  150.improvement.md  151.trivial.md  152.fix.md  154.fix.md  155.fix.md  156.improvement.md  157.fix.md  (+66 more)
cmaq_preprocess/: make_emis_template.py  make_prior.py  make_template.py  uncertainty.py
config/cmaq_preprocess/: config.docker.full.json  config.docker.json  config.docker.test.json  config.nci.json  config.nci.test.json
config/obs_preprocess/: config.austtest.json
docs/: changelog.md  cmaq_preprocess.md  debugging.md  development.md  domains.md  nci.md  openmethane_whole_process.md  outputs.md  parameters.md
extra_scripts/: __init__.py  archive_cmaq_input.py  cost_function.py  make_icon_bcon_template.py  plot_obs_coverage.py  reset_dates.py  singlestep.py
fourdvar/: user_driver.py
fourdvar/datadef/: adjoint_forcing_data.py  model_input_data.py  model_output_data.py  sensitivity_data.py
fourdvar/datadef/abstract/: _physical_abstract_data.py
fourdvar/params/: archive_defn.py  cmaq_config.py  date_defn.py  input_defn.py  root_path_defn.py  template_defn.py
fourdvar/transfunc/: calc_forcing.py  map_sense.py  obs_operator.py  prepare_model.py
fourdvar/util/: cmaq_handle.py  date_handle.py  file_handle.py  netcdf_handle.py
obs_preprocess/: CH4_surface_preprocess.py  map_obs.py  model_space.py  obsESA_defn.py  obsTROPOMI_defn.py  obs_defn.py  oco2lite_preprocess.py  plain.py  plane.py  ray_trace.py  sample_point_preprocess.py  submit_tropomi_methane_preprocess.sh  testplain.py  testplane.py  tropomi_methane.py  tropomi_methane_preprocess.py
regridding/: downscaling.py  regridding.py
sat_data/: config.json  fetch.py  submit.sh
scripts/: archive-daily.sh  archive-monthly.sh  archive.py  archive.sh  build_store_dir.py  docker-build-all.sh  docker-e2e-daily.sh  docker-e2e-monthly.sh  docker-entrypoint.sh  environment.sh  helpers.sh  load_from_archive.py  manual_postproc.py  run-all.sh  submit-run-all.sh  test_install.py
scripts/alerts/: alerts_baseline.py  create_alerts.py
scripts/cmaq/: run.bcon  run.icon  run.mcip
scripts/cmaq_preprocess/: bias_correct_cams.py  create_prior_domain.py  download_cams_input.py  make_emis_template.py  make_prior.py  make_template.py  run-cmaq-preprocess.sh  setup_for_cmaq.py  upload-domains.py  upload-domains.sh
scripts/fourdvar/: archive_cmaq_input.py  run_daily_step.py  singlestep.py
scripts/obs_preprocess/: CH4_surface_preprocess.py  fetch_tropomi.py  fetch_tropomi.sh  map_obs.py  oco2lite_preprocess.py  process_tropomi.sh  sample_column_preprocess.py  sample_point_preprocess.py  submit.sh  submit_fetch.sh  submit_tropomi_methane_preprocess.sh  tropomi_methane_preprocess.py
scripts/sat_data/: config.austtest.json  config.docker.json  config.json  fetch.py  submit.sh
src/cmaq_preprocess/: __init__.py  bias.py  cams.py  config_read_functions.py  make_emis_template.py  make_prior.py  make_template.py  mcip.py  mcip_preparation.py  read_config_cmaq.py  run_scripts.py  uncertainty.py  utils.py
src/fourdvar/: __init__.py  _main_driver.py  _transform.py  env.py  logging.py  user_driver.py
src/fourdvar/datadef/: __init__.py  adjoint_forcing_data.py  model_input_data.py  model_output_data.py  observation_data.py  physical_adjoint_data.py  physical_data.py  sensitivity_data.py  unknown_data.py
src/fourdvar/params/: __init__.py  _env.py  archive_defn.py  cmaq_config.py  data_access.py  date_defn.py  input_defn.py  root_path_defn.py  template_defn.py
src/fourdvar/transfunc/: __init__.py  calc_forcing.py  condition.py  map_sense.py  obs_operator.py  prepare_model.py  run_adjoint.py  run_model.py  uncondition.py
src/fourdvar/util/: archive_handle.py  cmaq_handle.py  cmaq_io_files.py  (+3 more)
src/obs_preprocess/: CH4_surface_preprocess.py  __init__.py  map_obs.py  model_space.py  obsESA_defn.py  obsOCO2_defn.py  obsTROPOMI_defn.py  obs_defn.py  oco2lite_preprocess.py  plane.py  ray_trace.py  sample_column_preprocess.py  sample_point_preprocess.py  submit_tropomi_methane_preprocess.sh  testplane.py  tropomi_methane_preprocess.py
src/postproc/: alerts.py  calculate_average_emissions.py  posterior_emissions_postprocess.py  test_attribution.py
src/util/: archive.py  logger.py  netcdf.py
templates/cmaq_preprocess/: run.bcon  run.cctm  run.icon  run.mcip  runCMAQ.sh
tests/: conftest.py  no_transport_finite_diff_test.py  pert_pert_test.py  submit.sh  submit_test_grad_finite_diff.sh  test_cost_verbose.py  test_grad_finite_diff.py  test_grad_step.py  test_grad_verbose.py
tests/fourdvar/: test_params.py
tests/integration/: pert_pert_test.py  submit.sh  submit_test_grad_finite_diff.sh  test_cost_verbose.py  test_grad_finite_diff.py  test_grad_verbose.py  test_run_templates.py
tests/obs_preprocess/: test_plane.py
tests/py4dvar/: test_cmaq_parameters.py
tests/test-data/: copy-test-data.sh
(+224 files in other folders)
