[project]
name = "openmethane"
version = "1.2.0"
description = "Method to calculate a gridded, prior emissions estimate for methane across Australia."
authors = [
    { name = "Peter Rayner", email = "peter.rayner@superpowerinstitute.com.au" },
    { name = "Stephen Thomas" },
    { name = "Jared Lewis", email = "jared.lewis@climate-resource.com" },
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "numpy>=1.26.4,<2",
    "netcdf4>=1.6.5,<2",
    "func-timeout>=4.3.5,<5",
    "scipy>=1.13.1,<2",
    "requests>=2.32.3,<3",
    "python-dotenv>=1.0.1,<2",
    "pyproj>=3.6.1,<4",
    "environs>=11.0.0,<12",
    "xarray>=2024.5.0,<2025",
    "click>=8.1.7,<9",
    "cdsapi>=0.7.3,<0.8",
    "attrs>=23.2.0,<24",
    "boto3>=1.35.11,<2",
]

[dependency-groups]
tests = [
    "pytest>=8.2.1,<9",
    "pytest-regressions>=2.5.0,<3",
]
dev = [
    "ruff>=0.4.6,<0.5",
    "towncrier>=24.7.1,<25",
    "awscli>=1.34.22,<2",
]

[tool.uv]
default-groups = [
    "tests",
    "dev",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
src = ["src"]
target-version = "py311"
# Provide some leeway for long docstring
line-length = 100


[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
#    "D",  # pydocstyle  # Documentation need a refresh
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
ignore = [
    "D100",  # Missing docstring in public module
    "D102",  # Missing docstring in public method
    "D105",  # Missing docstring in magic methods
    "D106",  # Missing docstring in public nested class
    "D400",  # First line should end with a period
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PD011", #  Use `.to_numpy()` instead of `.values`
    "S101", #  Use of `assert` detected
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",  # Documentation not needed in tests
    "S101",  # S101 Use of `assert` detected
    "PLR2004" # Magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = ["src"]


[tool.towncrier]
package = "openmethane"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## openmethane {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/openmethane/openmethane/pull/{issue})"
type = [
    { directory = "breaking", name = "âš ï¸ Breaking Changes", showcontent = true },
    { directory = "deprecation", name = "ðŸ—‘ï¸ Deprecations", showcontent = true },
    { directory = "feature", name = "ðŸ†• Features", showcontent = true },
    { directory = "improvement", name = "ðŸŽ‰ Improvements", showcontent = true },
    { directory = "fix", name = "ðŸ› Bug Fixes", showcontent = true },
    { directory = "docs", name = "ðŸ“š Improved Documentation", showcontent = true },
    { directory = "trivial", name = "ðŸ”§ Trivial/Internal Changes", showcontent = false },
]
